--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Company behind gmodstore.">
     <meta name="author" content="Discord Studios Ltd.">
+    <link rel="icon" type="image/x-icon" href="images/tticon.PNG">
 
     <title>TakeTimeYT's discord server</title>
 
@@ -26,19 +27,6 @@
         </p>
       </div>
     </section>
-
-    <div class="album text-muted">
-     <div class="container">
-       <div class="card-deck-wrapper">
-         <div class="card-deck">
-         <div class="card">
-           <a href="images/gmodstore_1.png" data-lightbox="gmodstore"><img class="card-img-top img-fluid" src="images/tticon.PNG" srcset="images/tticon.PNG 2x"></a>
-         </div>
-       </div>
-         </div>
-
-     </div>
-   </div>
 
     <section class="jumbotron text-xs-center" id="jobs">
       <div class="container">
