--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Company behind gmodstore.">
-    <meta name="author" content="Discord Studios Ltd.">
+    <meta name="description" content="'you a stoopid boi' - TakeTime 2017">
+    <meta name="author" content="TakeTimeFR">
     <link rel="icon" type="image/x-icon" href="images/tticon.PNG">
 
     <title>TakeTimeYT's discord server</title>
