--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
       </div>
     </section>
 
-    
+    <section class="jumbotron text-xs-center" id="jobs">
+      <div class="container">
+         <h1 class="jumbotron-heading">jobs</h1>
+         <p class="lead text-muted">we give you cookies</p>
+       </div>
+    </section>
 
     <section class="job text-muted">
     <div class="container">
