--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h1 class="jumbotron-heading">YouTube</h1>
         <p>
           <a href="https://www.youtube.com/channel/UC_xRpsAdja-2UHc3fkXpg7Q" class="btn btn-primary">visit YouTube channel &raquo;</a>
+          <a href="https://discord.gg/6mCHEgP" class="btn btn-primary">join the discord server &raquo;</a>
         </p>
       </div>
     </section>
