--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="header text-xs-center"><div class="container"><h1>TakeTimeYT's discord server</h1></div></section>
     <section class="jumbotron text-xs-center">
       <div class="container">
-        <h1 class="jumbotron-heading">YouTube</h1>
+        <h1 class="jumbotron-heading">YouTube & Discord</h1>
         <p>
           <a href="https://www.youtube.com/channel/UC_xRpsAdja-2UHc3fkXpg7Q" class="btn btn-primary">visit YouTube channel &raquo;</a>
           <a href="https://discord.gg/6mCHEgP" class="btn btn-primary">join the discord server &raquo;</a>
