--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
       </div>
     </section>
 
-    <section class="jumbotron text-xs-center" id="jobs">
-      <div class="container">
-         <h1 class="jumbotron-heading">jobs</h1>
-         <p class="lead text-muted">we give you cookies</p>
-       </div>
-    </section>
-
     <section class="job text-muted">
     <div class="container">
         <div class="row">
@@ -63,6 +56,9 @@
         <p class="float-xs-right">
           <a href="#top">back to top</a>
         </p>
+      <div class="container">
+         <p class="lead text-muted"><a href="https://github.com/TakeTeam/taketeam.github.io">source code</a></p>
+       </div>
       </div>
     </footer>
 
