--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="col-md-8">
 
               <h3>Helpers</h3>
-              <p>we're always looking for helpers, if you think you have something to offer us then don't be afraid to apply</p>
+              <p>we're always looking for helpers, if you think you have something to offer us then don't be afraid to apply in discord</p>
 
           </div>
           <div class="col-md-4">
