--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="container">
         <h1 class="jumbotron-heading">YouTube & Discord</h1>
         <p>
-          <a href="https://www.youtube.com/channel/UC_xRpsAdja-2UHc3fkXpg7Q" class="btn btn-primary">visit YouTube channel &raquo;</a>
-          <a href="https://discord.gg/6mCHEgP" class="btn btn-primary">join the discord server &raquo;</a>
+          <a href="https://www.youtube.com/channel/UC_xRpsAdja-2UHc3fkXpg7Q" class="btn btn-primary">Visit YouTube channel &raquo;</a>
+          <a href="https://discord.gg/6mCHEgP" class="btn btn-primary">Join the discord server &raquo;</a>
         </p>
       </div>
     </section>
@@ -35,17 +35,17 @@
           <div class="col-md-8">
 
               <h3>Helpers</h3>
-              <p>we're always looking for helpers, if you think you have something to offer us then don't be afraid to apply in discord</p>
+              <p>We're always looking for helpers, if you think you have something to offer us then don't be afraid to apply in discord</p>
 
           </div>
           <div class="col-md-4">
-              <h3>what we expect of you</h3>
+              <h3>What we expect of you</h3>
 
-              <h4>good communication</h4>
-              <p>you will be required to communicate with the team and work together to create solutions</p>
+              <h4>Good communication</h4>
+              <p>You will be required to communicate with the team and work together to create solutions</p>
 
-              <h4>in your application</h4>
-              <p>we don't care how formal you are, just make sure you prove and convey your skills clearly in whatever way you want.</p>
+              <h4>In your application</h4>
+              <p>We don't care how formal you are, just make sure you prove and convey your skills clearly in whatever way you want.</p>
           </div>
         </div>
       </div>
@@ -54,10 +54,10 @@
     <footer class="text-muted">
       <div class="container">
         <p class="float-xs-right">
-          <a href="#top">back to top</a>
+          <a href="#top">Back To Top</a>
         </p>
       <div class="container">
-         <p class="lead text-muted"><a href="https://github.com/TakeTeam/taketeam.github.io">source code</a></p>
+         <p class="lead text-muted"><a href="https://github.com/TakeTeam/taketeam.github.io">Source Code</a></p>
        </div>
       </div>
     </footer>
